

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tlnguyen.homework_catalog.activities.AddBook">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:hint="@string/book_title"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etDescription"
                android:layout_below="@+id/etName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:hint="@string/description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etIsbn"
                android:layout_below="@+id/etDescription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:hint="@string/isbn"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etImageUrl"
                android:layout_marginTop="33dp"
                android:layout_below="@+id/etIsbn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/image_url"/>

        </RelativeLayout>
    </ScrollView>

